--- a/themes/laba/less/style.less
+++ b/themes/laba/less/style.less
@@ -10,3 +10,8 @@
 @import 'grid';
 @import 'navs';
 
+@import 'vendor/3d-animations';
+@import 'vendor/3d-flip-stage';
+@import 'vendor/preloading';
+@import 'vendor/page-scroll-zoom';
+
