--- a/themes/laba/less/style.less
+++ b/themes/laba/less/style.less
@@ -9,9 +9,12 @@
 @import 'base';
 @import 'grid';
 @import 'navs';
+@import 'fonts';
 
 @import 'vendor/3d-animations';
 @import 'vendor/3d-flip-stage';
 @import 'vendor/preloading';
 @import 'vendor/page-scroll-zoom';
+
+@import 'pages/front.less';
 
