--- a/themes/laba/less/fonts.less
+++ b/themes/laba/less/fonts.less
@@ -9,6 +9,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'arsenalregular';
+    src: url('../fonts/arsenal/arsenal-regular.eot');
+    src: url('../fonts/arsenal/arsenal-regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/arsenal/arsenal-regular.woff') format('woff'),
+    url('../fonts/arsenal/arsenal-regular.ttf.gz') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 h2 {
     &.shine-title {
         font-family: 'NiteClub-Normal';
