--- a/themes/laba/less/pages/front.less
+++ b/themes/laba/less/pages/front.less
@@ -8,10 +8,46 @@
 
         img {
             border-radius: 100%;
-            box-shadow: 7px 7px 0px 0px rgba(50, 50, 50, 0.75);
+           // box-shadow: 7px 7px 0px 0px rgba(50, 50, 50, 0.75);
+            box-shadow:         0px 0px 18px 0px rgba(50, 50, 50, 0.75);
             border: @paper 2px solid;
             height: 200px;
             width: auto;
         }
+    }
+
+    a {
+        color: @paper;
+        text-decoration: none;
+    }
+
+    h2 {
+        color: white;
+        text-transform: uppercase;
+        font-family: 'NiteClub-Normal';
+    }
+
+    h3 {
+        font-family: 'arsenalregular';
+    }
+
+    .pt-page-0 {
+        .container {
+            position: relative;
+            padding: 40px;
+            box-sizing: border-box;
+            height: 100%;
+
+            div {
+                text-align: center;
+                width: 100%;
+
+                &.img-footer {
+                    position: absolute;
+                    bottom: 0;
+                }
+            }
+        }
+
     }
 }
