--- a/themes/laba/less/style.less
+++ b/themes/laba/less/style.less
@@ -15,6 +15,7 @@
 @import 'vendor/3d-flip-stage';
 @import 'vendor/preloading';
 @import 'vendor/page-scroll-zoom';
+@import 'vendor/flip3dmenu';
 
 @import 'pages/front.less';
 
