--- a/themes/laba/less/mixins.less
+++ b/themes/laba/less/mixins.less
@@ -33,3 +33,27 @@
   line-height: ~"@{pxValue}px"; 
   line-height: ~"@{remValue}rem";
 }
+
+.shine-title () {
+    font-family: 'NiteClub-Normal';
+    font-size: 150px; //todo
+    text-transform: uppercase;
+    color: white;
+    margin: 40px 0 0 40px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: auto;
+}
+
+.shine-title-static () {
+    text-shadow:
+            1px 1px 0px rgba(0, 0, 0, 1),
+            2px 2px 0px rgba(0, 0, 0, 1),
+            3px 3px 0px rgba(0, 0, 0, 1),
+            4px 4px 0px rgba(0, 0, 0, 1),
+            5px 5px 0px rgba(0, 0, 0, 1),
+            6px 6px 0px rgba(0, 0, 0, 1),
+            7px 7px 0px rgba(0, 0, 0, 1),
+            8px 8px 0px rgba(0, 0, 0, 1),
+            9px 9px 0px rgba(0, 0, 0, 1),
+            10px 10px 0px rgba(0, 0, 0, 1);
+}
