--- a/themes/laba/less/fonts.less
+++ b/themes/laba/less/fonts.less
@@ -22,12 +22,6 @@
 
 h2 {
     &.shine-title {
-        font-family: 'NiteClub-Normal';
-        font-size: 150px; //todo
-        text-transform: uppercase;
-        color: white;
-        margin: 40px 0 0 40px;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: auto;
+        .shine-title ();
     }
 }
