--- a/themes/laba/less/style.less
+++ b/themes/laba/less/style.less
@@ -11,6 +11,7 @@
 @import 'navs';
 @import 'fonts';
 
+@import 'vendor/animate';
 @import 'vendor/3d-animations';
 @import 'vendor/3d-flip-stage';
 @import 'vendor/preloading';
@@ -18,7 +19,14 @@
 @import 'vendor/flip3dmenu';
 
 @import 'pages/front.less';
-@import 'pages/works.less';
+
+.page-works {
+    @import 'pages/works.less';
+}
+
 @import 'pages/work.less';
 @import 'pages/forms.less';
 
+.page-node-24 {
+    @import 'pages/about.less';
+}
